# Game-Engine

./: App.cpp  App.h  CMakeLists.txt  README.md  main.cpp
Nebula/: CMakeLists.txt  Nebula.h
Nebula/Source/Core/: Application.cpp  Application.h  Core.h  ID.cpp  ID.h  ImGuiLayer.cpp  ImGuiLayer.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Window.h
Nebula/Source/Core/Events/: InputEvents.h  WindowEvent.h  iEvent.cpp  iEvent.h
Nebula/Source/Core/Project/: ProjectManager.cpp  ProjectManager.h  ProjectUtilities.h
Nebula/Source/Core/Project/Assets/: AssectsManager.cpp  AssectsManager.h  AssetTypes.h  BVHAccel.cpp  BVHAccel.h
Nebula/Source/Core/Project/Scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Nebula/Source/Core/Project/Scene/Components/: Components.cpp  Components.h
Nebula/Source/Core/Project/Scene/Entities/: Entities.h  EntityHandle.h
Nebula/Source/Platform/: CreateWindow.cpp
Nebula/Source/Platform/Mac/GLFWMacWindow/: ImGuiLayerGLFW.cpp  ImGuiLayerGLFW.h  WindowMac.cpp  WindowMac.h
Nebula/Source/Platform/Mac/Metal/: MetalCPPImplementation.mm
Nebula/Source/Platform/Mac/Metal/MetalAPI/: MetalBuffers.cpp  MetalBuffers.h  MetalComputeShader.cpp  MetalComputeShader.h  MetalFramebuffer.h  MetalFramebuffer.mm  MetalRendererAPI.cpp  MetalRendererAPI.h  MetalShader.cpp  MetalShader.h  MetalTexture.cpp  MetalTexture.h  MetalUniformBuffer.cpp  MetalUniformBuffer.h  MetalVertexArray.cpp  MetalVertexArray.h  compute.metal  dragon.metal  shader.metal
Nebula/Source/Platform/Mac/Metal/MetalWindow/: ImGuiLayerMetal.h  ImGuiLayerMetal.mm  MetalWindow.cpp  MetalWindow.h  glfw_adapter.h  glfw_adapter.mm
Nebula/Source/Platform/OpenGlAPI/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.h
Nebula/Source/Renderer/: Cameras.cpp  Cameras.h  ComputeShader.cpp  ComputeShader.h  Framebuffers.cpp  Framebuffers.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Render.cpp  Render.h  RenderCommand.cpp  RenderCommand.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  UniformBuffers.cpp  UniformBuffers.h  VertexArray.cpp  VertexArray.h  VertexBuffers.cpp  VertexBuffers.h
